--- a/host_vars/os10-LEAF-1.yaml
+++ b/host_vars/os10-LEAF-1.yaml
@@ -155,7 +155,7 @@ os10_interface:
     ip_and_mask: 10.0.2.1/32
   loopback 1:
     admin: up
-    ip_and_mask: 10.10.10.1
+    ip_and_mask: 10.10.10.1/32
   ethernet 1/1/5:
     admin: up
     desc: to host 1
